Correct directory paths

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Place favicon.ico in the root directory -->
 
 
-  <link rel="stylesheet" href="assets/css/index.css">
+  <link rel="stylesheet" href="https://tmkeaton.github.io/portfolio/assets/css/index.css">
 
 
   <link rel="stylesheet" href="https://samiralibabic.github.io/portfolio/css/normalize.css">
@@ -166,7 +166,7 @@
 
 </footer>
 
-<script src="assets/js/index.js"></script>
+<script src="https://tmkeaton.github.io/portfolio/assets/js/index.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="https://samiralibabic.github.io/portfolio/js/plugins.js"></script>
