--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
   </h3>
   <br>
   <div class="col-xs-12 col-sm-6 col-md-3 project-box">
-    <a href="https://proving.online/portfolio/plasmacoin/" class="thumbnail" target="_blank">
+    <a href="https://tmkeaton.github.io/plasma.coin/" class="thumbnail" target="_blank">
       <span class="glyphicon glyphicon-bitcoin" aria-hidden="true"></span>
       &nbsp;Plasma Coin
     </a>
   </div>
   <div class="col-xs-12 col-sm-6 col-md-3 project-box">
-    <a href="https://proving.online/portfolio/shop/" class="thumbnail" target="_blank">
+    <a href="https://tmkeaton.github.io/flwr.blue/" class="thumbnail" target="_blank">
       <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-      &nbsp;Simple Web Store
+      &nbsp;Mystery Box Tea
     </a>
   </div>
   <div class="col-xs-12 col-sm-6 col-md-3 project-box">
