--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
   <!-- Place favicon.ico in the root directory -->
 
 
-  <link rel="stylesheet" href="https://tmkeaton.github.io/portfolio/assets/css/index.css">
+  <link rel="stylesheet" href="https://tyler.vjr.io/assets/css/index.css">
 
 
-  <link rel="stylesheet" href="https://samiralibabic.github.io/portfolio/css/normalize.css">
 
   <!-- Google Font Lato -->
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
 
   <!-- Font Awesome  -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://samiralibabic.github.io/portfolio/css/font-mfizz-2.3.0/font-mfizz.css">
 
   <!-- Bootstrap -->
   <!-- Latest compiled and minified CSS -->
