--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Tyler Keaton | Portfolio</title>
-  <meta name="description" content="Personal portfolio of Web Designer and Developer Samir Alibabic">
+  <title>Tyler Keaton - Portfolio</title>
+  <meta name="description" content="Tyler Keaton - Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -25,7 +25,10 @@
   <!-- Bootstrap -->
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  
+  <!--
   <script src="https://samiralibabic.github.io/portfolio/js/vendor/modernizr-2.8.3.min.js"></script>
+  -->
 </head>
 <body>
 <!--[if lt IE 8]>
@@ -57,7 +60,9 @@
     <h2 id="main-subheading">[ Software Engineer ]</h2>
     <a href="#contact" class="btn btn-default landing-btn">CONTACT</a>
     <br><br>
-    <a href="https://proving.online/portfolio/assets/tyler-keaton-resume.pdf" target="_BLANK" class="btn btn-default landing-btn">RESUME</a>
+    <a href="https://tyler.vjr.io/assets/pdf/tyler-keaton-resume.pdf" target="_BLANK" class="btn btn-default landing-btn">RESUME</a>
+    <br><br>
+    <a href="https://tyler.vjr.io/assets/pdf/tyler-keaton-resume.pdf" target="_BLANK" class="btn btn-default landing-btn">RECCOMENDATION</a>
   </div>
 </header>
 <section id="intro" class="row">
