--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <!-- Place favicon.ico in the root directory -->
 
 
-  <link rel="stylesheet" href="https://tyler.vjr.io/assets/css/index.css">
-
+  <link rel="stylesheet" href="https://tmkeaton.github.io/portfolio/assets/css/index.css">
 
 
   <!-- Google Font Lato -->
