--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 
 <head>
+
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+
   <title>Tyler Keaton - Portfolio</title>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
   <meta name="description" content="Tyler Keaton - Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-
   <link rel="stylesheet" href="https://tmkeaton.github.io/portfolio/assets/css/index.css">
 
 
