--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <link rel="stylesheet" href="https://tmkeaton.github.io/portfolio/assets/css/index.css">
+  <link rel="stylesheet" href="/assets/css/index.css">
 
 
   <!-- Google Font Lato -->
@@ -58,11 +58,11 @@
   <div class="hero-text-box">
     <h1 id="main-heading">Tyler Keaton</h1>
     <h2 id="main-subheading">[ Software Engineer ]</h2>
-    <a href="#contact" class="btn btn-default landing-btn">CONTACT</a>
+    <a href="#contact" class="btn btn-default landing-btn">Contact</a>
     <br><br>
-    <a href="https://tyler.vjr.io/assets/pdf/tyler-keaton-resume.pdf" target="_BLANK" class="btn btn-default landing-btn">RESUME</a>
+    <a href="/assets/pdf/tyler-keaton-resume.pdf" target="_BLANK" class="btn btn-default landing-btn">Resume</a>
     <br><br>
-    <a href="https://tyler.vjr.io/assets/pdf/tyler-keaton-resume.pdf" target="_BLANK" class="btn btn-default landing-btn">RECCOMENDATION</a>
+    <a href="/assets/pdf/PennexxReccomendation.pdf" target="_BLANK" class="btn btn-default landing-btn">Reccomendation Letter</a>
   </div>
 </header>
 <section id="intro" class="row">
@@ -113,13 +113,13 @@
     </a>
   </div>
   <div class="col-xs-12 col-sm-6 col-md-3 project-box">
-    <a href="https://proving.online/form.php" class="thumbnail" target="_blank">
+    <a href="#" class="thumbnail" target="_blank">
       <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
       &nbsp;Contact Form
     </a>
   </div>
   <div class="col-xs-12 col-sm-6 col-md-3 project-box">
-    <a href="https://proving.online/portfolio/player/" class="thumbnail" target="_blank">
+    <a href="#" class="thumbnail" target="_blank">
       <span class="glyphicon glyphicon-headphones" aria-hidden="true"></span>
       &nbsp;Music Player
     </a>
@@ -169,7 +169,7 @@
 
 </footer>
 
-<script src="https://tmkeaton.github.io/portfolio/assets/js/index.js"></script>
+<script src="/assets/js/index.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
