--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <link rel="stylesheet" href="/assets/css/index.css">
+  <link rel="stylesheet" href="https://tmkeaton.github.io/portfolio/assets/css/index.css">
 
 
   <!-- Google Font Lato -->
@@ -60,9 +60,9 @@
     <h2 id="main-subheading">[ Software Engineer ]</h2>
     <a href="#contact" class="btn btn-default landing-btn">Contact</a>
     <br><br>
-    <a href="/portfolio/assets/pdf/tyler-keaton-resume.pdf" target="_BLANK" class="btn btn-default landing-btn">Resume</a>
+    <a href="https://tmkeaton.github.io/portfolio/assets/pdf/tyler-keaton-resume.pdf" target="_BLANK" class="btn btn-default landing-btn">Resume</a>
     <br><br>
-    <a href="/portfolio/assets/pdf/PennexxReccomendation.pdf" target="_BLANK" class="btn btn-default landing-btn">Reccomendation Letter</a>
+    <a href="https://tmkeaton.github.io/portfolio/assets/pdf/PennexxReccomendation.pdf" target="_BLANK" class="btn btn-default landing-btn">Reccomendation Letter</a>
   </div>
 </header>
 <section id="intro" class="row">
@@ -169,7 +169,7 @@
 
 </footer>
 
-<script src="/portfolio/assets/js/index.js"></script>
+<script src="https://tmkeaton.github.io/portfolio/assets/js/index.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
