--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <br><br>
     <a href="https://tmkeaton.github.io/portfolio/assets/pdf/Resume.pdf" target="_BLANK" class="btn btn-default landing-btn">Resume</a>
     <br><br>
-    <a href="https://tmkeaton.github.io/portfolio/assets/pdf/PennexxReccomendation.pdf" target="_BLANK" class="btn btn-default landing-btn">Reccomendation Letter</a>
+    <a href="https://tmkeaton.github.io/portfolio/assets/pdf/Recommendation.pdf" target="_BLANK" class="btn btn-default landing-btn">Recommendation Letter</a>
   </div>
 </header>
 <section id="intro" class="row">
