--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
   <div class="hero-text-box">
     <h1 id="main-heading">Tyler Keaton</h1>
     <h2 id="main-subheading">[ Software Engineer ]</h2>
-    <a href="#contact" class="btn btn-default landing-btn">Contact</a>
     <br><br>
-    <a href="https://tmkeaton.github.io/portfolio/assets/pdf/Resume.pdf" target="_BLANK" class="btn btn-default landing-btn">Resume</a>
+    <a href="https://tmkeaton.github.io/portfolio/assets/pdf/Resume.pdf" target="_BLANK" class="btn btn-default landing-btn">My Resume</a>
     <br><br>
     <a href="https://tmkeaton.github.io/portfolio/assets/pdf/Recommendation.pdf" target="_BLANK" class="btn btn-default landing-btn">Recommendation Letter</a>
   </div>
@@ -101,25 +100,25 @@
   </h3>
   <br>
   <div class="col-xs-12 col-sm-6 col-md-3 project-box">
-    <a href="https://tmkeaton.github.io/plasma.coin/" class="thumbnail" target="_blank">
+    <a href="#" class="thumbnail" target="_BLANK">
       <span class="glyphicon glyphicon-bitcoin" aria-hidden="true"></span>
       &nbsp;Plasma Coin
     </a>
   </div>
   <div class="col-xs-12 col-sm-6 col-md-3 project-box">
-    <a href="https://tmkeaton.github.io/flwr.blue/" class="thumbnail" target="_blank">
+    <a href="#" class="thumbnail" target="_BLANK">
       <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
       &nbsp;Mystery Box Tea
     </a>
   </div>
   <div class="col-xs-12 col-sm-6 col-md-3 project-box">
-    <a href="#" class="thumbnail" target="_blank">
+    <a href="#" class="thumbnail" target="_BLANK">
       <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
       &nbsp;Contact Form
     </a>
   </div>
   <div class="col-xs-12 col-sm-6 col-md-3 project-box">
-    <a href="#" class="thumbnail" target="_blank">
+    <a href="#" class="thumbnail" target="_BLANK">
       <span class="glyphicon glyphicon-headphones" aria-hidden="true"></span>
       &nbsp;Music Player
     </a>
